# dimgui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  dimgui.d  dub.json
imgui/: imgui_drawlist.cpp  imgui_extra.cpp
source/: dimgui.d
tools/: setup.d  tools.d
